--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,13 @@
   padding: 0;
 }
 
-body {
+#root {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
+
+  color: white;
+  background: #3e3e3e;
 }
