--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,20 @@
-@import 'bulma/css/bulma.css'
+@import 'bulma/css/bulma.css';
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+
+  color: white;
+  background: #3e3e3e;
+
+  font-family: 'Onest Variable', sans-serif;
+}
